--- a/styles.css
+++ b/styles.css
@@ -8,18 +8,131 @@ nav {
     display:flex;
     flex-direction: row;
     justify-content: space-between;
+  
+    margin-top: 10px;
 }
 
 .flex-container-1  {
     display:flex;
     flex-direction: row;
-
+    
+    flex-basis: auto;
+    padding-left:20px;
+    padding:10px;
+    padding-bottom: 100px;
    
 
 
 }
 
+li {
+    list-style: none;
+   
+    font-family: Arial,  sans-serif;
+    font-size: 13px;
+}
+
+.flex-container-1 li {
+    
+    margin:10px;
+    
+}
+
 .flex-container-2 {
     display:flex;
-    flex-direction:row;
+    flex-direction: row;
+   
+    flex-basis: auto;
+    margin-right: 30px;
+   
+
 }
+
+.flex-container-2 li {
+ 
+    margin:10px;
+}
+
+main {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  
+    padding-bottom:150px;
+}
+
+svg {
+
+    width:20px;
+   fill:rgb(154, 160, 166);
+   
+   margin-left: 10px;
+
+}
+
+.flex-container-3 {
+    margin:20px;
+    display:flex;
+    flex-direction: row;
+    
+}
+.search {
+    margin:10px;
+    padding: 10px 15px;
+    background:#f2f2f2;
+    border-radius: 4px;
+    
+}
+.lucky {
+    margin:10px;
+    padding:10px 15px;
+    background:#f2f2f2;
+    border-radius:4px;
+}
+.google-img {
+    margin:0px;
+}
+
+.searchbar {
+    height:44px;
+    
+    width: 584px ;
+    border-radius: 25px;
+    
+    display:flex;
+    
+    border: solid 1px #cccccc;
+}
+
+.searchbar input[type=text] {
+    background:transparent;
+    width:520px;
+    border:none;
+    margin-left: 15px;
+    font-size:16px;
+    font-family: Arial, sans-serif;
+}
+
+.footer {
+    display: flex;
+    
+    flex-direction:row;
+    justify-content: space-between;
+}
+
+.flex-container-4 {
+    background:red;
+    display:flex;
+    flex-direction: row;
+    padding:10px;
+   
+   
+}   
+
+.flex-container-5 {
+    background:red;
+    display:flex;
+    flex-direction: row;
+    
+}   
