--- a/styles.css
+++ b/styles.css
@@ -27,9 +27,32 @@ nav {
 
 li {
     list-style: none;
+ 
+
    
     font-family: Arial,  sans-serif;
     font-size: 13px;
+}
+
+li a {
+    color:black;
+    text-decoration: none;
+    
+}
+
+.square {
+
+    padding:10px;
+    background-image: url("images/google-cloud.png");
+    background-repeat: no-repeat;
+    align-items: center;
+
+    
+    
+}
+
+li a:hover {
+    text-decoration: underline;
 }
 
 .flex-container-1 li {
@@ -59,7 +82,7 @@ main {
     justify-content: center;
     align-items: center;
   
-    padding-bottom:150px;
+    padding-bottom:155px;
 }
 
 svg {
@@ -91,7 +114,7 @@ svg {
     border-radius:4px;
 }
 .google-img {
-    margin:0px;
+    margin:30px;
 }
 
 .searchbar {
@@ -114,25 +137,46 @@ svg {
     font-family: Arial, sans-serif;
 }
 
-.footer {
-    display: flex;
-    
-    flex-direction:row;
-    justify-content: space-between;
+.sign-in a {
+    padding-right:20px;
+    padding-left:20px;
+    padding-top:10px;
+    padding-bottom:10px;
+    background: -moz-linear-gradient(top, #4387fd, #4683ea);
+    background: linear-gradient(top, #4387fd, #4683ea);
+    border: 1px solid #4285f4;
+    color:white;
+    font-weight:bold;
+    border-radius: 4px;
 }
 
-.flex-container-4 {
-    background:red;
+footer {
+    background:#f2f2f2;
+    border: 1px solid #cccccc;
+    border-bottom: transparent;
     display:flex;
     flex-direction: row;
-    padding:10px;
+    justify-content: space-between;
    
+}
+.right li a, .left li a {
+    color:#5f6368;
+}
+.right {
+    display:flex;
+    flex-direction:row;
    
-}   
+}
 
-.flex-container-5 {
-    background:red;
+.left {
     display:flex;
     flex-direction: row;
-    
-}   
+}
+
+.left li {
+    margin:15px;
+}
+
+.right li {
+    margin:15px;
+}
